--- a/temperature-coverter/style.css
+++ b/temperature-coverter/style.css
@@ -7,12 +7,77 @@
     font-family: 'Nunito', sans-serif;
 }
 
-body{
+.main-container{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     text-align: center;
-    background-color: bisque;
+    background-color: #f6f6f6;
 }
 
+#calcTemp {
+    padding: 29px 67px;
+    min-height: 290px;
+    background-color: #BEBFC5;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 3px, rgba(0, 0, 0, 0.3) 0px 1px 2px;
+    
+}
+
+.date-icons{
+    display: flex;
+    justify-content: space-between;
+}
+
+/*label {
+    font-size: 30px;
+    line-height: 78px;
+}*/
+
+#temp {
+    width: 110px;
+    height: 34px;
+    border-radius: 5px;
+    margin: 12px;
+    padding: 8px;
+    font-size: 20px;
+    font-weight: 500;
+    border: none;
+    outline: none;
+}
+
+#temp_diff {
+    width: 120px;
+    height: 34px;
+    border-radius: 5px;
+    margin: 12px;
+    font-size: 18px;
+    font-weight: 500;
+    border: none;
+    outline: none;
+}
+
+#submit {
+    width: 250px;
+    border-radius: 5px;
+    margin: 30px 0 20px 0;
+    font-size: 18px;
+    background-color: rgb(218 229 220);
+    padding: 5px;
+    transition: all 0.5s ease;
+    background-color: #0070FF;
+    color: white;
+    font-weight: bold;
+    font-family: sans-serif;
+    border: none;
+}
+
+#submit:hover{
+    background-color: #044caa ;
+    cursor: pointer;
+}
+
+#result{
+    font-size: 27px;
+}
